--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     // Circular profile picture
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation "androidx.exifinterface:exifinterface:1.2.0"
