--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,9 @@ dependencies {
 
     //Firestore database
     implementation 'com.google.firebase:firebase-database-ktx:19.3.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+
+    //Google oauth
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
 }
