--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,7 @@ dependencies {
     //Google oauth
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
 }
