first steps in onSaleListFragments problemi: il fragment è visto come un fragment secondario (compare la freccia per tornare idnietro Non viene inflatato il search menu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.SEARCH" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -37,6 +37,13 @@
                 android:resource="@xml/file_paths">
             </meta-data>
         </provider>
+
+        <meta-data
+            android:name="android.app.default_searchable"
+            android:value="com.example.myapplication" />
+        <meta-data
+            android:name="android.app.searchable"
+            android:resource="@xml/searchable" />
     </application>
 
 </manifest>
