--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,4 +113,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
 
     implementation 'com.google.guava:guava:28.2-android'
+
+    // Locations
+    implementation "com.google.android.gms:play-services-location:17.0.0"
 }
