--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/sellback_app"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/sellback_app"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
